--- a/Search Image App.html
+++ b/Search Image App.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image App || free</title>
-    <link rel="stylesheet" href="image.css">
+    <link rel="stylesheet" href="/image.css">
 </head>
 <body>
     
@@ -34,6 +34,6 @@
       <button id="show-more-button">Show More</button>
 
 
-    <script src="image.js"></script>
+    <script src="/image.js"></script>
 </body>
 </html>
